--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,14 @@
         android:theme="@style/Theme.Fitnessfinal"
         tools:targetApi="31">
         <activity
-            android:name=".loading_activity"
-            android:exported="false"
-            android:label="@string/title_activity_loading"
-            android:theme="@style/Theme.Fitnessfinal" />
+            android:name=".LaunchActivity"
+            android:theme="@style/LaunchTheme"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
